FIND_PACKAGE(Gettext REQUIRED)


IF (NOT GETTEXT_MSGMERGE_EXECUTABLE)
  MESSAGE(FATAL_ERROR "Please install msgmerge binary")
ENDIF (NOT GETTEXT_MSGMERGE_EXECUTABLE)

IF (NOT GETTEXT_MSGFMT_EXECUTABLE)
  MESSAGE(FATAL_ERROR "Please install msgmerge binary")
ENDIF (NOT GETTEXT_MSGFMT_EXECUTABLE)

ADD_SUBDIRECTORY( de )
